# theta

./: CHANGELOG.md  README.md  mu.tc  theta.cabal
app/: Main.hs
src/: Env.hs  Lexer.x  Parser.y  Syntax.hs  Theta.hs  Types.hs
