cabal-version:          3.0
name:                   theta
version:                0.1.0.0
synopsis:               Reference implementation of the Theta Calculus.
-- description:
license:                GPL-3.0-only
license-file:           LICENSE
author:                 august
maintainer:             augustalm@gmail.com
-- copyright:
category:               Type theory
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    Theta
    other-modules:      Types, Env, Syntax, Lexer, Parser
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1,
                        text-short ^>=0.1.6,
                        array ^>=0.5.4.0
    hs-source-dirs:     src
    build-tool-depends: alex:alex, happy:happy
    default-language:   GHC2021

executable theta
    import:             warnings
    main-is:            Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1, theta

    hs-source-dirs:     app
    default-language:   GHC2021

test-suite theta-test
    import:             warnings
    default-language:   GHC2021
    -- other-modules:
    -- other-extensions:
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    build-depends:      base ^>=4.17.2.1, theta
